# creative-intelligence-engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
apps/studio/: index.js  models.js  muapi.js  package.json
apps/web/: next.config.mjs  package.json  playwright.config.ts  tsconfig.json
docs/: demo.md  plan.md  smoke-test-2026-05-16.md
fixtures/: brand.json  brand.md  connectors.json  insights.json  onboarding.json
fixtures/briefs/: coffee-launch.json  (+2 more)
infra/: docker-compose.yml
services/agents/: contract.py  orchestrator.py  personas.py  pyproject.toml  registry.py  runtime.py
services/agents/adapters/: __init__.py  claude_code.py  hermes.py  hermes_cli.py  openai.py  pioneer.py  together.py
services/agents/nodes/: __init__.py  analyst.py  art_director.py  copywriter.py  creative_director.py  marketing_director.py  publisher.py  strategist.py
services/agents/tests/: test_hermes_cli.py  test_orchestrator.py  test_storyboard_fanout.py  test_streaming.py
services/api/: db.py  main.py  model_registry.py  models_db.py  pyproject.toml  schemas.py  sse.py
services/api/adapters_gen/: __init__.py  fal.py  openai_image.py
services/api/routers/: agents.py  brand.py  canvas.py  chat.py  connectors.py  generate.py  loops.py  onboarding.py  publish.py  research.py  score.py
services/api/tests/: README.md  test_brand_scan.py  test_canvas.py  test_chat.py  test_connectors.py  test_generate.py  test_loops.py  test_onboarding.py  test_publish.py  test_research.py  test_score.py
services/scheduler/: main.py  pyproject.toml
(+136 files in other folders)
