[project]
name = "cie-agents"
version = "0.1.0"
description = "Creative Intelligence Engine — Paperclip-style agent layer"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "openai>=1.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
