[project]
name = "cie-scheduler"
version = "0.1.0"
description = "Creative Intelligence Engine — APScheduler worker for Loops"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
